添加播放/暂停按钮功能
添加播放/暂停按钮功能，
播放时点击暂停
暂停时点击播放

--- a/player.html
+++ b/player.html
@@ -15,9 +15,9 @@
         </audio>
         <div class='player-controls'>
             <input id='id-input-slider' type="range" value=0 min=0 max=100>
-            <button id='id-button-prev'>上一首</button>
-            <button id='id-button-play'>播放/暂停</button>
-            <button id='id-button-next'>下一首</button>
+            <button id='id-button-prev' data-action='prev'>上一首</button>
+            <button id='id-button-play' data-action='pause'>暂停</button>
+            <button id='id-button-next' data-action='next'>下一首</button>
             <input id='id-input-volume' type="range" value=0 min=0 max=100>
         </div>
         <div class='player-songs'>
