Fifth-增加了点击歌曲播放的功能
1 增加了点击歌曲播放的功能
2 将歌名颜色变化的功能改写到songSwitch函数中，简化了各个事件绑定函数的代码

--- a/player.html
+++ b/player.html
@@ -20,6 +20,9 @@
         <audio id='id-audio-player' autoplay controls="controls" src='songs/时光 - 许巍.mp3'>
             <source id='id-source-playing' src="songs/曾经的你 - 许巍.mp3" >
         </audio>
+        <div class='player-display'>
+            <h2 id='id-h2-name'>曾经的你 - 许巍.mp3</h2>
+        </div>
         <div class='player-controls'>
             <input id='id-input-slider' type="range" value=0 min=0 max=100>
             <button id='id-button-prev' data-action='prev'>上一首</button>
