Seventh-增加滑动条和音量条调节功能
1 点击进度条和音量条时可调节进度和音量
2 暂时不能滑动改变

--- a/player.html
+++ b/player.html
@@ -30,6 +30,7 @@
         <div class='player-controls'>
             <div class='controls-slider'>
                 <input id='id-input-slider' type="range" value=0 min=0 max=100>
+                <input id='id-input-volume' type="range" value=0 min=0 max=100>
             </div>
             <div class='controls-play'>
                 <button id='id-button-prev' data-action='prev'>上一首</button>
