开始为player增加样式，美化界面

--- a/player.html
+++ b/player.html
@@ -17,19 +17,21 @@
 </head>
 <body>
     <div class='player-container'>
-        <audio id='id-audio-player' autoplay controls="controls" src='songs/曾经的你 - 许巍.mp3'>
+        <audio id='id-audio-player' autoplay src='songs/曾经的你 - 许巍.mp3'>
             <source id='id-source-playing' src="songs/曾经的你 - 许巍.mp3" >
         </audio>
-        <div class="player-time">
-            <time id=id-time-current class=left>0:00</time>
-            <time id=id-time-duration class=right>2:31</time>
-        </div>
         <div class='player-display'>
             <h2 id='id-h2-name'>曾经的你 - 许巍.mp3</h2>
         </div>
+        <div class='player-img on'></div>
+
         <div class='player-controls'>
             <div class='controls-slider'>
                 <input id='id-input-slider' type="range" value=0 min=0 max=100>
+                <div class="player-time">
+                    <time id=id-time-current class=left>0:00</time>
+                    <time id=id-time-duration class=right>2:31</time>
+                </div>
                 <input id='id-input-volume' type="range" value=0 min=0 max=100>
             </div>
             <div class='controls-play'>
